--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,14 +12,15 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
     "com.unity.xr.oculus": "3.0.2",
-    "io.extendreality.tilia.interactions.controllables.unity": "2.5.6",
     "io.extendreality.tilia.camerarigs.spatialsimulator.unity": "2.0.10",
     "io.extendreality.tilia.camerarigs.trackedalias.unity": "2.0.4",
     "io.extendreality.tilia.camerarigs.xrpluginframework.unity": "2.0.4",
     "io.extendreality.tilia.indicators.objectpointers.unity": "2.1.7",
     "io.extendreality.tilia.input.unityinputsystem": "2.0.4",
+    "io.extendreality.tilia.interactions.controllables.unity": "2.5.6",
     "io.extendreality.tilia.interactions.interactables.unity": "2.7.0",
     "io.extendreality.tilia.locomotors.teleporter.unity": "2.1.0",
+    "io.extendreality.tilia.locomotors.teleporttargets.unity": "2.0.9",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
